<?xml version="1.0"?>
<package format="2">
  <name>my_cnc_control</name>
  <version>0.0.1</version>
  <description>The my_cnc_control package for CNC force and torque control</description>

  <!-- Maintainer information -->
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Catkin and system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

  <!-- Export the package to make it available for other packages -->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>

